# i3hloc

./: .gitignore  LICENSE  README.md  a.out  i3hloc.1  i3hloc.cabal  package.yaml  stack.yaml
i3hloc/: Main.hs
src/: .#Block.hs  .#Hloc.hs  Block.hs  Colors.hs  Config.hs  ConfigDefault.hs  DisplayText.hs  Hloc.hs  Main.hs  Pango.hs  ekonf
src/Blocks/: Bandwidth.hs  Battery.hs  Command.hs  Date.hs  Time.hs  Volume.hs
src/Parser/: ConfigParser.hs
src/Parsing/: ConfigParser.hs
src/Testing/: .#Examples.hs  Examples.hs
