name:                i3hloc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/ikciwor/i3hloc#readme
license:             BSD3
license-file:        LICENSE
author:              Radoslaw Rowicki
maintainer:          radrowicki@gmail.com
category:            utils
build-type:          Simple
ghc-options:         -O2
cabal-version:       >=1.10
extra-source-files:  README.md

executable i3hloc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base > 4 && < 9,
                       process,
                       split,
                       font-awesome-type,
                       directory,
                       clock
