name:                i3hloc
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/ikciwor/i3hloc#readme
license:             BSD3
license-file:        LICENSE
author:              Radoslaw Rowicki
maintainer:          radrowicki@gmail.com
category:            utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable i3hloc
  ghc-options:         -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base > 4 && < 9,
                       clock,
                       directory,
                       font-awesome-type,
                       process,
                       regex,
                       regex-base,
                       regex-posix,
                       split,
                       text,
                       text-show

  Other-modules:       Block,
                       Blocks.Bandwidth,
                       Blocks.Battery,
                       Blocks.Command,
                       Blocks.Time,
                       Blocks.Volume,
                       Colors,
                       Config,
                       Hloc,
                       Pango
