name:                i3hloc
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/ikciwor/i3hloc#readme
license:             BSD3
license-file:        LICENSE
author:              Radoslaw Rowicki
maintainer:          radrowicki@gmail.com
category:            utils
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable i3hloc
  ghc-options:         -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  extensions:          OverloadedStrings,
                       MultiWayIf
  build-depends:       base > 4 && < 9,
                       clock,
                       containers >= 0.5,
                       directory,
                       font-awesome-type,
                       process,
                       regex,
                       regex-base,
                       regex-posix,
                       split,
                       text,
                       json,
                       bytestring >= 0.10,
                       trifecta >= 1.7,
                       raw-strings-qq >= 1.1,
                       mtl >= 2.2,
                       time >= 1.6,
                       dates

  other-modules:       Blocks.Bandwidth
                       Blocks.Battery
                       Blocks.Command
                       Blocks.Time
                       Blocks.Volume
                       Hloc
                       Config
                       Pango
                       Colors
                       Block
                       DisplayText
                       Parsing.ConfigParser
                       Testing.Examples